name fix and some changes

--- a/examples/01_basic_qmnn_tutorial.ipynb
+++ b/examples/01_basic_qmnn_tutorial.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# QMNN Basic Tutorial\n",
+    "# QMANN Basic Tutorial\n",
     "\n",
-    "This notebook demonstrates the basic usage of Quantum Memory-Augmented Neural Networks (QMNN).\n",
+    "This notebook demonstrates the basic usage of Quantum Memory-Augmented Neural Networks (QMANN).\n",
     "\n",
     "## Learning Objectives\n",
-    "- Understand QMNN architecture\n",
-    "- Create and train a basic QMNN model\n",
+    "- Understand QMANN architecture\n",
+    "- Create and train a basic QMANN model\n",
     "- Explore quantum memory operations\n",
     "- Compare with classical baselines\n",
     "- Visualize quantum advantages"
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Install QMNN if not already installed\n",
+    "# Install QMANN if not already installed\n",
     "# !pip install -e .\n",
     "\n",
     "import torch\n",
@@ -31,15 +31,15 @@
     "import seaborn as sns\n",
     "from tqdm import tqdm\n",
     "\n",
-    "# QMNN imports\n",
-    "from qmnn import QMNN, QuantumMemory, QMNNTrainer\n",
-    "from qmnn import get_system_info, get_available_features\n",
+    "# QMANN imports\n",
+    "from qmann import QMANN, QuantumMemory, QMANNTrainer\n",
+    "from qmann import get_system_info, get_available_features\n",
     "\n",
     "# Set random seeds for reproducibility\n",
     "torch.manual_seed(42)\n",
     "np.random.seed(42)\n",
     "\n",
-    "print(\"QMNN Tutorial - Basic Usage\")\n",
+    "print(\"QMANN Tutorial - Basic Usage\")\n",
     "print(\"=\" * 40)"
    ]
   },
@@ -61,7 +61,7 @@
     "features = get_available_features()\n",
     "\n",
     "print(\"System Information:\")\n",
-    "print(f\"- QMNN Version: {system_info['qmnn_version']}\")\n",
+    "print(f\"- QMANN Version: {system_info['qmann_version']}\")\n",
     "print(f\"- PyTorch Version: {system_info['pytorch_version']}\")\n",
     "print(f\"- CUDA Available: {system_info['cuda_available']}\")\n",
     "print(f\"- Max Recommended Qubits: {system_info['recommended_config']['max_qubits']}\")\n",
@@ -125,7 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Creating a QMNN Model"
+    "## 3. Creating a QMANN Model"
    ]
   },
   {
@@ -147,10 +147,10 @@
     "    'dropout': 0.1\n",
     "}\n",
     "\n",
-    "# Create QMNN model\n",
-    "model = QMNN(**config).to(device)\n",
+    "# Create QMANN model\n",
+    "model = QMANN(**config).to(device)\n",
     "\n",
-    "print(\"QMNN Model Created:\")\n",
+    "print(\"QMANN Model Created:\")\n",
     "print(f\"- Total Parameters: {sum(p.numel() for p in model.parameters()):,}\")\n",
     "\n",
     "# Get quantum information\n",
@@ -237,7 +237,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Training the QMNN Model"
+    "## 5. Training the QMANN Model"
    ]
   },
   {
@@ -247,7 +247,7 @@
    "outputs": [],
    "source": [
     "# Create trainer\n",
-    "trainer = QMNNTrainer(\n",
+    "trainer = QMANNTrainer(\n",
     "    model=model,\n",
     "    learning_rate=1e-3,\n",
     "    device=device\n",
@@ -261,7 +261,7 @@
     "test_accuracies = []\n",
     "memory_usages = []\n",
     "\n",
-    "print(\"Training QMNN model...\")\n",
+    "print(\"Training QMANN model...\")\n",
     "for epoch in tqdm(range(n_epochs)):\n",
     "    # Training\n",
     "    epoch_loss = 0\n",
@@ -412,7 +412,7 @@
     "\n",
     "# Train LSTM baseline\n",
     "lstm_model = LSTMBaseline(config['input_dim'], config['hidden_dim'], config['output_dim']).to(device)\n",
-    "lstm_trainer = QMNNTrainer(lstm_model, learning_rate=1e-3, device=device)\n",
+    "lstm_trainer = QMANNTrainer(lstm_model, learning_rate=1e-3, device=device)\n",
     "\n",
     "print(\"Training LSTM baseline...\")\n",
     "lstm_accuracies = []\n",
@@ -428,9 +428,9 @@
     "\n",
     "# Compare results\n",
     "plt.figure(figsize=(10, 6))\n",
-    "plt.plot(test_accuracies, label='QMNN', linewidth=2)\n",
+    "plt.plot(test_accuracies, label='QMANN', linewidth=2)\n",
     "plt.plot(lstm_accuracies, label='LSTM Baseline', linewidth=2)\n",
-    "plt.title('QMNN vs Classical Baseline')\n",
+    "plt.title('QMANN vs Classical Baseline')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Test Accuracy')\n",
     "plt.grid(True)\n",
@@ -438,10 +438,10 @@
     "plt.show()\n",
     "\n",
     "print(f\"\\nFinal Results:\")\n",
-    "print(f\"QMNN Test Accuracy: {test_accuracies[-1]:.4f}\")\n",
+    "print(f\"QMANN Test Accuracy: {test_accuracies[-1]:.4f}\")\n",
     "print(f\"LSTM Test Accuracy: {lstm_accuracies[-1]:.4f}\")\n",
     "improvement = (test_accuracies[-1] - lstm_accuracies[-1]) / lstm_accuracies[-1] * 100\n",
-    "print(f\"QMNN Improvement: {improvement:+.2f}%\")"
+    "print(f\"QMANN Improvement: {improvement:+.2f}%\")"
    ]
   },
   {
@@ -453,13 +453,13 @@
     "In this tutorial, we:\n",
     "\n",
     "1. **Explored quantum memory**: Learned how QRAM stores and retrieves information using quantum superposition\n",
-    "2. **Built a QMNN model**: Created a hybrid quantum-classical neural network\n",
-    "3. **Trained on memory tasks**: Demonstrated QMNN's ability to handle memory-dependent problems\n",
+    "2. **Built a QMANN model**: Created a hybrid quantum-classical neural network\n",
+    "3. **Trained on memory tasks**: Demonstrated QMANN's ability to handle memory-dependent problems\n",
     "4. **Analyzed quantum components**: Examined the quantum vs classical parameter ratio\n",
     "5. **Compared with baselines**: Showed potential quantum advantages\n",
     "\n",
     "### Key Takeaways:\n",
-    "- QMNN combines classical neural networks with quantum memory for enhanced capacity\n",
+    "- QMANN combines classical neural networks with quantum memory for enhanced capacity\n",
     "- Quantum memory can provide advantages for tasks requiring long-term memory\n",
     "- The system automatically handles hardware constraints and optimization\n",
     "- Performance depends on the specific task and quantum component configuration\n",
