--- a/paper/sections/01_intro.tex
+++ b/paper/sections/01_intro.tex
@@ -7,14 +7,14 @@ Memory-augmented neural networks (MANNs) have been proposed to address these lim
 
 Quantum computing offers a fundamentally different paradigm for information processing, leveraging quantum mechanical phenomena such as superposition and entanglement to achieve computational advantages~\cite{nielsen2010quantum}. Quantum Random Access Memory (\qram) has been proposed as a quantum analogue to classical RAM, promising exponential storage capacity with logarithmic access complexity~\cite{giovannetti2008quantum, park2019circuit}.
 
-In this work, we introduce \textbf{Quantum Memory-Augmented Neural Networks} (\qmnn), a novel hybrid architecture that combines the learning capabilities of classical neural networks with the memory advantages of quantum systems. Our key contributions are:
+In this work, we introduce \textbf{Quantum Memory-Augmented Neural Networks} (\qmann), a novel hybrid architecture that combines the learning capabilities of classical neural networks with the memory advantages of quantum systems. Our key contributions are:
 
 \begin{enumerate}
     \item \textbf{Novel Architecture}: We propose the first practical integration of \qram with neural networks, creating a hybrid quantum-classical learning system.
     
     \item \textbf{Theoretical Analysis}: We provide rigorous theoretical analysis of the memory capacity and access complexity advantages offered by quantum memory augmentation.
     
-    \item \textbf{Experimental Validation}: We demonstrate the effectiveness of \qmnn on standard machine learning benchmarks, showing significant improvements over classical approaches.
+    \item \textbf{Experimental Validation}: We demonstrate the effectiveness of \qmann on standard machine learning benchmarks, showing significant improvements over classical approaches.
     
     \item \textbf{Open Source Implementation}: We provide a complete, reproducible implementation using modern quantum computing frameworks.
 \end{enumerate}
@@ -63,6 +63,6 @@ Our approach addresses these challenges through:
 
 \subsection{Paper Organization}
 
-The remainder of this paper is organized as follows. Section~\ref{sec:related} reviews related work in quantum machine learning and memory-augmented neural networks. Section~\ref{sec:theory} presents the theoretical foundations of \qmnn, including formal definitions and complexity analysis. Section~\ref{sec:results} describes our experimental setup and presents empirical results on benchmark datasets. Section~\ref{sec:discussion} discusses the implications of our findings and limitations of the current approach. Section~\ref{sec:conclusion} concludes with future research directions.
+The remainder of this paper is organized as follows. Section~\ref{sec:related} reviews related work in quantum machine learning and memory-augmented neural networks. Section~\ref{sec:theory} presents the theoretical foundations of \qmann, including formal definitions and complexity analysis. Section~\ref{sec:results} describes our experimental setup and presents empirical results on benchmark datasets. Section~\ref{sec:discussion} discusses the implications of our findings and limitations of the current approach. Section~\ref{sec:conclusion} concludes with future research directions.
 
 The complete source code, experimental data, and reproduction instructions are available at \url{https://github.com/bayrameker/QMANN} under an open-source license, ensuring full reproducibility of our results.
