--- a/paper/main.tex
+++ b/paper/main.tex
@@ -35,7 +35,7 @@
 }
 
 % Custom commands
-\newcommand{\qmnn}{\textsc{QMNN}}
+\newcommand{\qmann}{\textsc{QMANN}}
 \newcommand{\qram}{\textsc{QRAM}}
 \newcommand{\ket}[1]{\left|#1\right\rangle}
 \newcommand{\bra}[1]{\left\langle#1\right|}
@@ -65,7 +65,7 @@
 \date{\today}
 
 \begin{abstract}
-We introduce Quantum Memory-Augmented Neural Networks (\qmnn), a novel architecture that combines classical neural networks with quantum random access memory (\qram) to enhance learning capabilities. Our approach leverages quantum superposition and entanglement to provide exponential memory capacity scaling with logarithmic access complexity. We demonstrate theoretical advantages in memory efficiency and present experimental validation on standard machine learning benchmarks. Results show 15\% improvement in classification accuracy on MNIST dataset compared to classical memory-augmented networks, while achieving $2^n$ storage capacity with $n$ qubits. The proposed architecture opens new avenues for quantum-enhanced machine learning with practical implications for large-scale learning tasks.
+We introduce Quantum Memory-Augmented Neural Networks (\qmann), a novel architecture that combines classical neural networks with quantum random access memory (\qram) to enhance learning capabilities. Our approach leverages quantum superposition and entanglement to provide exponential memory capacity scaling with logarithmic access complexity. We demonstrate theoretical advantages in memory efficiency and present experimental validation on standard machine learning benchmarks. Results show 15\% improvement in classification accuracy on MNIST dataset compared to classical memory-augmented networks, while achieving $2^n$ storage capacity with $n$ qubits. The proposed architecture opens new avenues for quantum-enhanced machine learning with practical implications for large-scale learning tasks.
 \end{abstract}
 
 \keywords{quantum computing, neural networks, quantum memory, QRAM, machine learning, quantum machine learning}
